--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,12 +37,21 @@
             <ul class="dropdown-menu" role="menu">
                 <li><a href="#">New company</a></li>
                 <!-- TODO сделать отдельной функцией очистку форм. Потом вызывать с каждой-->
-                <li><a href="#" data-toggle="modal" data-target="#editUser" onclick="$('#detailsForm').find(':input').val('');">New user</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#editUser" onclick="myvalidate()">New user</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">Log out</a></li>
             </ul>
         </div>
     </div>
+
+    <script type="text/javascript">
+        function myvalidate() {
+            var form = $('#detailsForm');
+            form.find(':input').val('');
+            // get validator and reset it
+            form.data('bs.validator').reset();
+        }
+    </script>
 </div>
 </body>
 
