datatable plugin added

--- a/src/main/resources/templates/fragments/bootstrap.html
+++ b/src/main/resources/templates/fragments/bootstrap.html
@@ -4,8 +4,15 @@
 <th:block th:fragment="bootstrap">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="/webjars/datatables/1.10.15/css/dataTables.bootstrap.min.css">-->
+    <link rel="stylesheet" href="/webjars/datatables/1.10.15/css/jquery.dataTables.css">
+    <link rel="stylesheet" href="/webjars/datetimepicker/2.5.4/jquery.datetimepicker.css">
+
     <script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="webjars/datatables/1.10.15/js/jquery.dataTables.min.js" defer></script>
+    <script type="text/javascript" src="webjars/datatables/1.10.15/js/dataTables.bootstrap.min.js" defer></script>
+    <script type="text/javascript" src="webjars/datetimepicker/2.5.4/build/jquery.datetimepicker.full.min.js" defer></script>
 
     <script src="/js/Example.js"></script>
     <!--        http://bootboxjs.com/           -->
