--- a/src/main/resources/templates/fragments/includs.html
+++ b/src/main/resources/templates/fragments/includs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-<th:block th:fragment="bootstrap">
+<th:block th:fragment="ui">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="/webjars/datatables/1.10.15/css/dataTables.bootstrap.min.css">-->
