--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,17 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example </title>
+    <title>SEVEN's test task</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
-    <th:block th:replace="~{fragments/bootstrap :: bootstrap}"></th:block>
+    <th:block th:replace="~{fragments/includs :: ui}"></th:block>
 </head>
 <body>
-<form th:action="@{/registration}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
-</form>
 
 <div class="container">
-    <!--<img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo"/>-->
     <form th:action="@{/login}" method="POST" class="form-signin" style="margin-top: 45px">
         <h3 class="form-signin-heading" th:text="Welcome"></h3>
         <br/>
