datatable plugin added

--- a/src/main/resources/templates/fragments/includs.html
+++ b/src/main/resources/templates/fragments/includs.html
@@ -18,6 +18,10 @@
     <!--        http://bootboxjs.com/           -->
     <!--    Bootstrap modals made easy          -->
     <script src="/js/bootbox.min.js" defer></script>
+
+    <!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
+    <!-- default header name is X-CSRF-TOKEN -->
+    <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
 </th:block>
 </head>
 </html>
