--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -48,7 +48,7 @@
                 </table>
             </div>
             <div class="tab-pane fade" id="tabusers">
-                <table class="table table-striped table-hover" id="userTable">
+                <table class="table table-striped display" id="userTable">
                     <thead>
                     <tr>
                         <th class="col-md-1">Last name</th>
@@ -264,8 +264,17 @@
     <!-- --------------------------------------------------------------------------------------- -->
     <script type="application/javascript">
 
-        $(document).ready(function () {
-            $('#userTable').DataTable();
+        $(function () {
+            $('#userTable').DataTable({
+                //"paging": false,
+                "autoWidth": false,
+                "columnDefs": [
+                    {"orderable": false, "targets": [2, 3, 4, 5, 6, 7]}
+                    ,{"width": "15%", "targets": [0,1,2]}
+                    ,{"width": "5%", "targets": [6,7]}
+                ]
+            });
+
             var frmDetails = $('#detailsForm');
             var frmEditUser = $('#editUser');
 
@@ -374,8 +383,8 @@
                 validator.validate();
 
                 // validate passed
-                if (!validator.hasErrors()){
-                //if ($('#detailsForm').find('.has-error, .has-danger').length == 0) {
+                if (!validator.hasErrors()) {
+                    //if ($('#detailsForm').find('.has-error, .has-danger').length == 0) {
                     $.ajax({
                         type: "POST",
                         url: 'users',
