--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -258,6 +258,7 @@
     <!-- --------------------------------------------------------------------------------------- -->
     <!-- ---------------------------        ACTIONS WITH CONFIRM         ----------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
+    <script type="application/javascript" src="/js/datatableUtils.js"></script>
     <script type="application/javascript">
 
         $(function () {
@@ -335,7 +336,7 @@
                 };
             });
 
-            $('.delete-user').on("click", function (e) {
+            /*$('.delete-user').on("click", function (e) {
                 e.preventDefault();
 
                 var id = parseInt($(this).closest("td").attr("id"));
@@ -366,7 +367,7 @@
                                 $.ajax({
                                     type: 'DELETE',
                                     url: '/users/' + id,
-                                    /*data: {id: id},*/
+                                    /!*data: {id: id},*!/
                                     success: function (data) {
                                         $(".delete-user").closest("td#" + data).parent("tr").fadeOut("slow", function () {
                                             $(".delete-user").closest("td#" + data).parent("tr").remove();
@@ -383,9 +384,9 @@
                         }
                     }
                 });
-            });
+            });*/
 
-            $('.update-user').validator().on("click", function (e) {
+/*            $('.update-user').validator().on("click", function (e) {
                 e.preventDefault();
 
                 frmDetails[0].reset();
@@ -405,7 +406,7 @@
                     });
                     frmEditUser.modal();
                 });
-            });
+            });*/
 
             //$('.save-user').on("click", function (e) {
             frmDetails.validator().on('submit', function (e) {
@@ -445,7 +446,7 @@
             });
 
             /* TODO использовать как общий функционал для всех форм*/
-            function updateRow(id) {
+            /*function updateRow(id) {
                 var ajaxUrl = "users/" + id;
                 $.get(ajaxUrl, function (data) {
                     $.each(data, function (key, value) {
@@ -453,44 +454,21 @@
                     });
                     frmEditUser.modal();
                 });
-            }
+            }*/
 
             function renderEditBtn(data, type, row) {
                 if (type == 'display') {
-                    return '<a class="btn btn-xs btn-primary" onclick="updateRow(' + row.id + ');">' +
-                        '<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>';
+                    return '<button class="btn btn-xs btn-primary" id="rowid' + row.id + '" onclick="updateRow(' + row.id + ');">'+
+                        '<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>';
                 }
             }
 
             function renderDeleteBtn(data, type, row) {
                 if (type == 'display') {
-                    return '<a class="btn btn-xs btn-danger" onclick="deleteRow(' + row.id + ');">'+
-                        '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>';
+                    return '<button class="btn btn-xs btn-danger" id="rowid' + row.id + '" onclick="deleteRow(' + row.id + ');">'+
+                        '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>';
                 }
             }
-
-            /*            function updateRow(id) {
-             $('#modalTitle').html(i18n[editTitleKey]);
-             $.get(ajaxUrl + id, function (data) {
-             $.each(data, function (key, value) {
-             form.find("input[name='" + key + "']").val(
-             key === "dateTime" ? formatDate(value) : value
-             );
-             });
-             $('#editRow').modal();
-             });
-             }
-
-             function deleteRow(id) {
-             $.ajax({
-             url: ajaxUrl + id,
-             type: 'DELETE',
-             success: function () {
-             updateTable();
-             successNoty('common.deleted');
-             }
-             });
-             }*/
         })
 
     </script>
