--- a/src/main/resources/templates/fragments/includs.html
+++ b/src/main/resources/templates/fragments/includs.html
@@ -19,6 +19,8 @@
     <!--    Bootstrap modals made easy          -->
     <script src="/js/bootbox.min.js" defer></script>
 
+    <script src="/js/validator.min.js" defer></script>
+
     <!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
     <!-- default header name is X-CSRF-TOKEN -->
     <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
