--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -252,226 +252,14 @@
                 </div>
             </div>
         </div>
-        <script src="/js/validator.min.js"></script>
     </div>
 
     <!-- --------------------------------------------------------------------------------------- -->
     <!-- ---------------------------        ACTIONS WITH CONFIRM         ----------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
     <script type="application/javascript" src="/js/datatableUtils.js"></script>
-    <script type="application/javascript">
+    <script type="application/javascript" src="/js/userDatatables.js"></script>
 
-        $(function () {
-            $('#userTable').DataTable({
-                "columns": [
-                    {
-                        "data": "lastname"
-                    },
-                    {
-                        "data": "name"
-                    },
-                    {
-                        "data": "email",
-                        "render": function (data, type, row) {
-                            if (type == 'display') {
-                                return '<a href="mailto:' + data + '">' + data + '</a>';
-                            }
-                            return data;
-                        }
-                    },
-                    {
-                        "data": "phone"
-                    },
-                    {
-                        "data": "company.name"
-                    },
-                    {
-                        "data": "roles[].role"
-                    },
-                    {
-                        "orderable": false,
-                        "defaultContent": "",
-                        "render": renderEditBtn
-                    },
-                    {
-                        "orderable": false,
-                        "defaultContent": "",
-                        "render": renderDeleteBtn
-                    }
-                ],
-                "ajax": {
-                    "url": 'users',
-                    "dataSrc": ""
-                },
-                "autoWidth": false,
-                "columnDefs": [
-                    {"orderable": false, "targets": [2, 3, 4, 5, 6, 7]}
-                    , {"width": "15%", "targets": [0, 1, 2]}
-                    , {"width": "5%", "targets": [6, 7]}
-                ]
-            });
-
-            var frmDetails = $('#detailsForm');
-            var frmEditUser = $('#editUser');
-
-            /* ============================================================ */
-            /* http://stepansuvorov.com/blog/2014/04/jquery-put-and-delete  */
-            /* provide PUT/DELETE ability via jQuery                        */
-            /* ============================================================ */
-            jQuery.each(["put", "delete"], function (i, method) {
-                jQuery[method] = function (url, data, callback, type) {
-                    if (jQuery.isFunction(data)) {
-                        type = type || callback;
-                        callback = data;
-                        data = undefined;
-                    }
-
-                    return jQuery.ajax({
-                        url: url,
-                        type: method,
-                        dataType: type,
-                        data: data,
-                        success: callback
-                    });
-                };
-            });
-
-            /*$('.delete-user').on("click", function (e) {
-                e.preventDefault();
-
-                var id = parseInt($(this).closest("td").attr("id"));
-
-                var currentRow = $(this).closest("tr");
-                var fname = currentRow.find("td:eq(0)").text(); // get current row 1st TD value
-                var lname = currentRow.find("td:eq(1)").text(); // get current row 2nd TD
-                var email = currentRow.find("td:eq(2)").text(); // get current row 3rd TD
-                var data = "<br />" + fname + " " + lname + " (" + email + ")";
-
-                bootbox.dialog({
-                    message: "Are you sure you want to delete user" + data + " ?",
-                    title: "<i class='glyphicon glyphicon-trash'></i> Delete !",
-                    size: 'small',
-                    buttons: {
-                        success: {
-                            label: "No",
-                            className: "btn-success",
-                            callback: function () {
-                                $('.bootbox').modal('hide');
-                            }
-                        },
-                        danger: {
-                            label: "Delete!",
-                            className: "btn-danger",
-                            callback: function () {
-
-                                $.ajax({
-                                    type: 'DELETE',
-                                    url: '/users/' + id,
-                                    /!*data: {id: id},*!/
-                                    success: function (data) {
-                                        $(".delete-user").closest("td#" + data).parent("tr").fadeOut("slow", function () {
-                                            $(".delete-user").closest("td#" + data).parent("tr").remove();
-                                        });
-                                    }
-                                })
-                                    .done(function (response) {
-                                        bootbox.alert('User has been deleted successfully...');
-                                    })
-                                    .fail(function () {
-                                        bootbox.alert('Oops... Something Went Wrong ....');
-                                    })
-                            }
-                        }
-                    }
-                });
-            });*/
-
-/*            $('.update-user').validator().on("click", function (e) {
-                e.preventDefault();
-
-                frmDetails[0].reset();
-
-                var validator = frmDetails.data('bs.validator');
-                if (frmDetails.find('.has-error, .has-danger').length > 0) {
-                    validator.reset();
-                    validator.update();
-                }
-
-                var id = parseInt($(this).closest("td").attr("id"));
-                var ajaxUrl = "users/" + id;
-
-                $.get(ajaxUrl, function (data) {
-                    $.each(data, function (key, value) {
-                        frmDetails.find("input[name='" + key + "']").val(value);
-                    });
-                    frmEditUser.modal();
-                });
-            });*/
-
-            //$('.save-user').on("click", function (e) {
-            frmDetails.validator().on('submit', function (e) {
-                e.preventDefault();
-
-                var validator = frmDetails.data('bs.validator');
-
-                validator.reset();
-                validator.update();
-                validator.validate();
-
-                // validate passed
-                if (!validator.hasErrors()) {
-                    //if ($('#detailsForm').find('.has-error, .has-danger').length == 0) {
-                    $.ajax({
-                        type: "POST",
-                        url: 'users',
-                        data: frmDetails.serialize(),
-                        success: function (data) {
-                            frmEditUser.modal('hide');
-                            bootbox.alert({
-                                message: 'User successfully saved',
-                                size: 'small',
-                                callback: function () {
-                                    window.location.reload();
-                                }
-                            });
-                        },
-                        error: function (xhr, str) {
-                            bootbox.alert({
-                                message: 'An user with such email is already registered in the app!!',
-                                size: 'small'
-                            });
-                        }
-                    });
-                }
-            });
-
-            /* TODO использовать как общий функционал для всех форм*/
-            /*function updateRow(id) {
-                var ajaxUrl = "users/" + id;
-                $.get(ajaxUrl, function (data) {
-                    $.each(data, function (key, value) {
-                        frmDetails.find("input[name='" + key + "']").val(value);
-                    });
-                    frmEditUser.modal();
-                });
-            }*/
-
-            function renderEditBtn(data, type, row) {
-                if (type == 'display') {
-                    return '<button class="btn btn-xs btn-primary" id="rowid' + row.id + '" onclick="updateRow(' + row.id + ');">'+
-                        '<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>';
-                }
-            }
-
-            function renderDeleteBtn(data, type, row) {
-                if (type == 'display') {
-                    return '<button class="btn btn-xs btn-danger" id="rowid' + row.id + '" onclick="deleteRow(' + row.id + ');">'+
-                        '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>';
-                }
-            }
-        })
-
-    </script>
 </div>
 </body>
 </html>
