--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -16,7 +16,7 @@
     <div class="panel-body">
         <div class="tab-content">
             <div class="tab-pane fade in active" id="tabcompanies">
-                <table class="table table-striped">
+                <table class="table table-striped display" id="companyTable">
                     <thead>
                     <tr>
                         <th>Name</th>
@@ -26,7 +26,7 @@
                         <th></th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <!--<tbody>
                     <tr th:each="company : ${companies}">
                         <td th:text="${company.name}"></td>
                         <td th:text="${company.email}"></td>
@@ -44,7 +44,7 @@
                             </p>
                         </td>
                     </tr>
-                    </tbody>
+                    </tbody>-->
                 </table>
             </div>
             <div class="tab-pane fade" id="tabusers">
@@ -61,30 +61,6 @@
                         <th></th>
                     </tr>
                     </thead>
-                    <!--<tbody>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.lastname}"></td>
-                        <td th:text="${user.name}"></td>
-                        <td th:text="${user.email}"></td>
-                        <td th:text="${user.phone}"></td>
-                        <td th:text="${user.company.name}"></td>
-                        <td th:text="${#strings.setJoin(user.roles, ', ')}"></td>
-                        <td th:id="${user.id}">
-                            <p data-placement="top" data-toggle="tooltip" title="Edit">
-                                <button class="btn btn-primary btn-xs update-user" data-title="Edit"><span
-                                        class="glyphicon glyphicon-pencil"></span>
-                                </button>
-                            </p>
-                        </td>
-                        <td th:id="${user.id}">
-                            <p data-placement="top" data-toggle="tooltip" title="Delete">
-                                <button class="btn btn-danger btn-xs delete-user" data-title="Delete"
-                                        data-toggle="modal"><span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </p>
-                        </td>
-                    </tr>
-                    </tbody>-->
                 </table>
             </div>
             <div class="tab-pane fade" id="tabreports">
@@ -259,6 +235,7 @@
     <!-- --------------------------------------------------------------------------------------- -->
     <script type="application/javascript" src="/js/datatableUtils.js"></script>
     <script type="application/javascript" src="/js/userDatatables.js"></script>
+    <script type="application/javascript" src="/js/companyDatatables.js"></script>
 
 </div>
 </body>
