refactoring, separate JS

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
             <ul class="dropdown-menu" role="menu">
                 <li><a href="#">New company</a></li>
                 <!-- TODO сделать отдельной функцией очистку форм. Потом вызывать с каждой-->
-                <li><a href="#" data-toggle="modal" data-target="#editUser" onclick="myvalidate()">New user</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#editUser" onclick="myValidate(frmDetailsArr[0])">New user</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">Log out</a></li>
             </ul>
