--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -65,7 +65,7 @@
             </div>
             <div class="tab-pane fade" id="tabreports">
                 <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped display" id="reportTable">
                         <thead>
                         <tr>
                             <th>Name</th>
@@ -123,7 +123,7 @@
                     <!--<form autocomplete="off" action="#" th:action="@{/registration}" th:object="${user}" method="post"
                           class="form-horizontal" role="form" data-toggle="validator" id="detailsForm">-->
                     <form autocomplete="off" action="#" th:object="${user}"
-                          class="form-horizontal" role="form" data-toggle="validator" id="detailsForm">
+                          class="form-horizontal" role="form" data-toggle="validator" id="detailsFormUser">
 
                         <input type="hidden" id="id" name="id"/>
 
@@ -218,8 +218,7 @@
                                         data-toggle="tooltip" data-dismiss="modal" title="Cancel">
                                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </button>
-                                <button type="button" onclick="myvalidate()"
-                                        class="btn btn-info pull-right">
+                                <button type="button" onclick="myValidate(frmDetailsArr[0])" class="btn btn-info pull-right">
                                     <span class="glyphicon glyphicon-unchecked" aria-hidden="true"></span>
                                 </button>
                             </div>
