--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -26,25 +26,6 @@
                         <th></th>
                     </tr>
                     </thead>
-                    <!--<tbody>
-                    <tr th:each="company : ${companies}">
-                        <td th:text="${company.name}"></td>
-                        <td th:text="${company.email}"></td>
-                        <td th:text="${company.address}"></td>
-                        <td>
-                            <p data-placement="top" data-toggle="tooltip" title="Edit">
-                                <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
-                                        data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
-                            </p>
-                        </td>
-                        <td>
-                            <p data-placement="top" data-toggle="tooltip" title="Delete">
-                                <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
-                                        data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button>
-                            </p>
-                        </td>
-                    </tr>
-                    </tbody>-->
                 </table>
             </div>
             <div class="tab-pane fade" id="tabusers">
@@ -79,6 +60,7 @@
                         <tr th:each="report : ${reports}">
                             <td th:text="${report.name}"></td>
                             <td th:text="${#temporals.format(report.date, 'yyyy-MM-dd HH:mm')}"></td>
+                            <!--TODO сделать ограничение на кол-во символов, типа выводить только заголовок отчета. С линком на сам отчет-->
                             <td th:text="${report.data}"></td>
                             <td>
                                 <p data-placement="top" data-toggle="tooltip" title="Edit">
@@ -111,7 +93,8 @@
         <p class="text-center">Non admin message</p>
     </th:block>
 
-    <th:block th:replace="~{fragments/modals/editUser :: editUser}"></th:block>
+    <!--   modal forms  -->
+    <th:block th:replace="~{fragments/modals/user :: editUser}"></th:block>
     <!-- --------------------------------------------------------------------------------------- -->
     <!-- ---------------------------        ACTIONS WITH CONFIRM         ----------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
