refactoring, separate JS

--- a/src/main/resources/templates/fragments/modals/user.html
+++ b/src/main/resources/templates/fragments/modals/user.html
@@ -91,7 +91,7 @@
                                         th:value="${company.id}"
                                         th:text="${company.name}">
                                 </option>-->
-                                <script>getCompanies($('#dropOperator'));</script>
+                                <!--<script>getCompanies($('#dropOperator'));</script>-->
                             </select>
                             <span class='help-block with-errors'></span>
                         </div>
