dynamically fill SELECT

--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -102,13 +102,13 @@
     <script type="application/javascript" src="/js/userDatatables.js" defer></script>
     <script type="application/javascript" src="/js/companyDatatables.js" defer></script>
 
-    <select id="userslist">
+<!--    <select id="userslist">
         <option value="" selected="selected">Select user:</option>
         <option th:each="user : ${users}"
                 th:value="${user.id}"
                 th:text="${user.name}">
         </option>
-    </select>
+    </select>-->
 
 </div>
 </body>
