POST error handle

--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -69,6 +69,7 @@
                                     </button>
                                 </p>
                             </td>
+                            <!--TODO Админ не имеет права удалять и править отчеты. Учесть в reportDatatables.js-->
                             <td>
                                 <p data-placement="top" data-toggle="tooltip" title="Delete">
                                     <button class="btn btn-danger btn-xs" data-title="Delete">
