companies HTML added

--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -96,6 +96,7 @@
 
     <!--   modal forms  -->
     <th:block th:replace="~{fragments/modals/user :: editUser}"></th:block>
+    <th:block th:replace="~{fragments/modals/company :: editCompany}"></th:block>
     <!-- --------------------------------------------------------------------------------------- -->
     <!-- ---------------------------        ACTIONS WITH CONFIRM         ----------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
