Report datatable added

--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -103,6 +103,7 @@
     <script type="application/javascript" src="/js/datatableUtils.js" defer></script>
     <script type="application/javascript" src="/js/userDatatables.js" defer></script>
     <script type="application/javascript" src="/js/companyDatatables.js" defer></script>
+    <script type="application/javascript" src="/js/reportDatatables.js" defer></script>
 
 <!--    <select id="userslist">
         <option value="" selected="selected">Select user:</option>
